Commit que subí hace 4 horas

--- a/WebContent/snippets/listadoViajes.xhtml
+++ b/WebContent/snippets/listadoViajes.xhtml
@@ -5,9 +5,16 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<h:form id="form-listado">
+			
+			<p:inputText action="#{settings.rows}"
+			validatorMessage="Introduzca un número" >
+			<f:ajax update="tablaViajes" event="keyup"> </f:ajax>
+			Filas por página:
+			</p:inputText>
+			
 			<p:dataTable var="viaje" value="#{trips.viajes}" border="1"
 				sortMode="multiple" id="tablaViajes" widgetVar="listaviajes"
-                 emptyMessage="#{msgs.NoSeEncontraronViajes}" paginator="true" rows="5">
+                 emptyMessage="#{msgs.NoSeEncontraronViajes}" paginator="true" rows="#{settings.rows}">
 
 				<p:column headerText="#{msgs.ciudadOrigen}"
 					sortBy="#{viaje.departure.city}"
