--- a/WebContent/snippets/navegacion-sin-sesion.xhtml
+++ b/WebContent/snippets/navegacion-sin-sesion.xhtml
@@ -8,8 +8,7 @@
 			<p:menuitem value="#{msgs.iniciarSesion}" action="/login.xhtml" id="linklogin">
 				<f:param name="i" value="0" />
 			</p:menuitem>
-			<p:menuitem value="#{msgs.registrarse}" action="/registrarse.xhtml" id="linkRegistrarse"
-			actionListener="#{user.iniciaUser}">
+			<p:menuitem value="#{msgs.registrarse}" action="/registrarse.xhtml" id="linkRegistrarse">
 				<f:param name="i" value="1" />
 			</p:menuitem>
 			<p:menuitem value="#{msgs.listado}"
